--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="global-card-link">
           <%= button_to "Edit", edit_user_path(@user), method: :get, class: "btn-edit"%>
-          <% if (@user.books).count < 0 %>
+          <% if (@user.books).count <= 0 %>
             <%= button_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-delete"%>
           <% end %>
       </div>
